Implemented Grafanders features into Grafana 10.1.5

--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -352,5 +352,6 @@
     <script nonce="[[.Nonce]]">
       performance.mark('frontend_boot_js_done_time_seconds');
     </script>
+    <link rel="stylesheet" href="[[.ContentDeliveryURL]]public/[[.CustomStylesheet]]" />
   </body>
 </html>
