--- a/public/views/error-template.html
+++ b/public/views/error-template.html
@@ -56,5 +56,6 @@
         </div>
       </div>
     </div>
+    <link rel="stylesheet" href="[[.ContentDeliveryURL]]public/[[.CustomStylesheet]]" />
   </body>
 </html>
